-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.2.0
-
None
-
3
-
4741
Richard Henwood Patch Set 6: Fails (1 inline comment) I get a crash if I do the ... 12:34 PM
Patch Set 6: Fails
(1 inline comment)
I get a crash if I do the following on a VM:
1. /usr/lib64/lustre/tests/llmount.sh 2. mds-survey
This is on Lustre Master build #448.
richard@wc-hp:~$ netcat -u -l 6666 Lustre: Echo OBD driver; http://www.lustre.org/ BUG: unable to handle kernel NULL pointer dereference at 0000000000000018 IP: [<ffffffffa086ac4c>] osd_child_dentry_get+0x3c/0xb0 [osd_ldiskfs] PGD 1565c067 PUD 1565b067 PMD 0 Oops: 0002 1 SMP last sysfs file: /sys/module/fid/initstate CPU 0 Modules linked in: obdecho(U) lustre(U) obdfilter(U) ost(U) osd_ldiskfs(U) cmm(U) fsfilt_ldiskfs(U) exportfs mdt(U) mdd(U) mds(U) mgs(U) ldiskfs(U) jbd mgc(U) lov(U) osc(U) mdc(U) lmv(U) fid(U) fld(U) lquota(U) ptlrpc(U) obdclass(U) lvfs(U) ksocklnd(U) lnet(U) libcfs(U) netconsole configfs ipt_REJECT nf_conntrack_ipv4 nf_defrag_ipv4 iptable_filter ip_tables ip6t_REJECT nf_conntrack_ipv6 nf_defrag_ipv6 xt_state nf_conntrack ip6table_filter ip6_tables ipv6 microcode virtio_balloon 8139too 8139cp mii i2c_piix4 i2c_core sg ext4 mbcache jbd2 sd_mod crc_t10dif virtio_pci virtio_ring virtio pata_acpi ata_generic ata_piix dm_mirror dm_region_hash dm_log dm_mod [last unloaded: speedstep_lib]
Pid: 2632, comm: lctl Not tainted 2.6.32-220.el6_lustre.x86_64 #1 Bochs Bochs
RIP: 0010:[<ffffffffa086ac4c>] [<ffffffffa086ac4c>] osd_child_dentry_get+0x3c/0xb0 [osd_ldiskfs]
RSP: 0018:ffff88001001b718 EFLAGS: 00010246
RAX: ffff880012d05b48 RBX: ffff880011b1d980 RCX: 0000000000000005
RDX: ffff88001aea3ec0 RSI: ffffffffa087e200 RDI: ffff880016b96cc8
RBP: ffff88001001b738 R08: 0000000000000000 R09: ffff880011b1da90
R10: 00000000fffffff3 R11: 0000000000000000 R12: ffff88001556bc20
R13: 0000000000000005 R14: 0000000000000000 R15: ffff88001556bc20
FS: 00007ff791a5c700(0000) GS:ffff880002200000(0000) knlGS:0000000000000000
CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
CR2: 0000000000000018 CR3: 0000000015666000 CR4: 00000000000006f0
DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
Process lctl (pid: 2632, threadinfo ffff88001001a000, task ffff8800162320c0)
Stack:
ffff880011b1d980 ffff880012d05b48 ffff880016b96cc8 0000000000000000
<0> ffff88001001b7c8 ffffffffa08716e8 ffffffff8100bc0e ffff88001001b858
<0> 0000000000000005 ffff880016201d58 ffff880011b1cd40 0000000000000001
Call Trace:
[<ffffffffa08716e8>] osd_index_ea_lookup+0x128/0x3e0 [osd_ldiskfs]
[<ffffffff8100bc0e>] ? apic_timer_interrupt+0xe/0x20
[<ffffffffa07b02d7>] __mdd_lookup_locked+0x3a7/0x6c0 [mdd]
[<ffffffffa041f866>] ? htable_lookup+0xa6/0x190 [obdclass]
[<ffffffffa08715c0>] ? osd_index_ea_lookup+0x0/0x3e0 [osd_ldiskfs]
[<ffffffffa07b0646>] mdd_lookup+0x56/0x120 [mdd]
[<ffffffffa099a33a>] echo_md_lookup+0x9a/0x320 [obdecho]
[<ffffffffa099b5da>] echo_md_destroy_internal+0x3a/0x4b0 [obdecho]
[<ffffffffa09a179c>] ? echo_set_lmm_size+0x22c/0x5c0 [obdecho]
[<ffffffff81133059>] ? zone_statistics+0x99/0xc0
[<ffffffffa09a270d>] echo_md_handler+0xbdd/0x1d50 [obdecho]
[<ffffffff81133059>] ? zone_statistics+0x99/0xc0
[<ffffffff81122361>] ? get_page_from_freelist+0x3d1/0x820
[<ffffffffa09a89c6>] echo_client_iocontrol+0x1c76/0x29b0 [obdecho]
[<ffffffffa02c2a13>] ? cfs_alloc+0x63/0x90 [libcfs]
[<ffffffffa03cef52>] ? obd_ioctl_getdata+0x172/0x1060 [obdclass]
[<ffffffff8117a4a5>] ? chrdev_open+0x125/0x230
[<ffffffffa03e4304>] class_handle_ioctl+0x1574/0x23e0 [obdclass]
[<ffffffff81173f2f>] ? __dentry_open+0x23f/0x360
[<ffffffff8120d5df>] ? security_inode_permission+0x1f/0x30
[<ffffffff81174164>] ? nameidata_to_filp+0x54/0x70
[<ffffffffa03ce313>] obd_class_ioctl+0x53/0x240 [obdclass]
[<ffffffff81189342>] vfs_ioctl+0x22/0xa0
[<ffffffff81038448>] ? pvclock_clocksource_read+0x58/0xd0
[<ffffffff811894e4>] do_vfs_ioctl+0x84/0x580
[<ffffffff81189a61>] sys_ioctl+0x81/0xa0
[<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b
Code: 4c 89 6c 24 10 4c 89 74 24 18 0f 1f 44 00 00 48 89 f3 48 c7 c6 00 e2 87 a0 49 89 d4 41 89 cd e8 6b 27 bb ff 49 89 c6 48 8b 43 58 <49> 89 46 18 48 8b 7b 08 e8 b7 df ff ff 48 8b 40 58 48 8b 40 10
RIP [<ffffffffa086ac4c>] osd_child_dentry_get+0x3c/0xb0 [osd_ldiskfs]
RSP <ffff88001001b718>
CR2: 0000000000000018
--[ end trace d1520709143a0a9d ]--
Kernel panic - not syncing: Fatal exception
Pid: 2632, comm: lctl Tainted: G D ---------------- 2.6.32-220.el6_lustre.x86_64 #1
Call Trace:
[<ffffffff814ec701>] ? panic+0x78/0x143
[<ffffffff814f0894>] ? oops_end+0xe4/0x100
[<ffffffff8104230b>] ? no_context+0xfb/0x260
[<ffffffff81042595>] ? __bad_area_nosemaphore+0x125/0x1e0
[<ffffffff810426be>] ? bad_area+0x4e/0x60
[<ffffffff81042dc3>] ? __do_page_fault+0x3c3/0x480
[<ffffffff81133059>] ? zone_statistics+0x99/0xc0
[<ffffffff814f284e>] ? do_page_fault+0x3e/0xa0
[<ffffffff814efc05>] ? page_fault+0x25/0x30
[<ffffffffa086ac4c>] ? osd_child_dentry_get+0x3c/0xb0 [osd_ldiskfs]
[<ffffffffa086ac45>] ? osd_child_dentry_get+0x35/0xb0 [osd_ldiskfs]
[<ffffffffa08716e8>] ? osd_index_ea_lookup+0x128/0x3e0 [osd_ldiskfs]
[<ffffffff8100bc0e>] ? apic_timer_interrupt+0xe/0x20
[<ffffffffa07b02d7>] ? __mdd_lookup_locked+0x3a7/0x6c0 [mdd]
[<ffffffffa041f866>] ? htable_lookup+0xa6/0x190 [obdclass]
[<ffffffffa08715c0>] ? osd_index_ea_lookup+0x0/0x3e0 [osd_ldiskfs]
[<ffffffffa07b0646>] ? mdd_lookup+0x56/0x120 [mdd]
[<ffffffffa099a33a>] ? echo_md_lookup+0x9a/0x320 [obdecho]
[<ffffffffa099b5da>] ? echo_md_destroy_internal+0x3a/0x4b0 [obdecho]
[<ffffffffa09a179c>] ? echo_set_lmm_size+0x22c/0x5c0 [obdecho]
[<ffffffff81133059>] ? zone_statistics+0x99/0xc0
[<ffffffffa09a270d>] ? echo_md_handler+0xbdd/0x1d50 [obdecho]
[<ffffffff81133059>] ? zone_statistics+0x99/0xc0
[<ffffffff81122361>] ? get_page_from_freelist+0x3d1/0x820
[<ffffffffa09a89c6>] ? echo_client_iocontrol+0x1c76/0x29b0 [obdecho]
[<ffffffffa02c2a13>] ? cfs_alloc+0x63/0x90 [libcfs]
[<ffffffffa03cef52>] ? obd_ioctl_getdata+0x172/0x1060 [obdclass]
[<ffffffff8117a4a5>] ? chrdev_open+0x125/0x230
[<ffffffffa03e4304>] ? class_handle_ioctl+0x1574/0x23e0 [obdclass]
[<ffffffff81173f2f>] ? __dentry_open+0x23f/0x360
[<ffffffff8120d5df>] ? security_inode_permission+0x1f/0x30
[<ffffffff81174164>] ? nameidata_to_filp+0x54/0x70
[<ffffffffa03ce313>] ? obd_class_ioctl+0x53/0x240 [obdclass]
[<ffffffff81189342>] ? vfs_ioctl+0x22/0xa0
[<ffffffff81038448>] ? pvclock_clocksource_read+0x58/0xd0
[<ffffffff811894e4>] ? do_vfs_ioctl+0x84/0x580
[<ffffffff81189a61>] ? sys_ioctl+0x81/0xa0
[<ffffffff8100b0f2>] ? system_call_fastpath+0x16/0x1b
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....