LU-1067 obdecho: Recheck client env ctx for echo md client.

During echo md test, if there are real clients being mounted
at the same time, the cl env it gotten from the cache might
contain the wrong context, so we need recheck the ctx and
refill the env forcedly.

Signed-off-by: Wang Di <di.wang@whamcloud.com>
Change-Id: Iddbceee80966b5ca9284c886731386a97d089d53
Reviewed-on: http://review.whamcloud.com/2092
Tested-by: Hudson
Reviewed-by: Jinshan Xiong <jinshan.xiong@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>